<resources>
    <string name="app_name">CursoAndroid</string>
    <string name="textoBotonIrFragment">Ir a Fragments</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="inicio">Home</string>
    <string name="buscar">Buscar</string>
    <string name="perfil">Perfil</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hintUserName">Usuario</string>
    <string name="hintPassword">Contraseña</string>
    <string name="btnLogin">Login</string>
    <string name="textoNoTienesCuenta">No tienes cuenta?</string>
    <string name="textoCrearCuenta"> Crea una aquí</string>
    <string name="hintCorreoRegistro">Correo Electrónico</string>
    <string name="hintNombreRegistro">Nombre</string>
    <string name="hintUsuarioRegistro">Usuario</string>
    <string name="hintPasswordRegistro">Contraseña</string>
    <string name="btnRegistrar">Crear Cuenta</string>
    <string name="toolbarCreateAccount">Crear Cuenta</string>
    <string name="usuario">Eduardo Barrios</string>
    <string name="timeCard">4 días</string>
    <string name="firstWordCard">Hace</string>
    <string name="numeroLikes">10 me gusta</string>
    <string name="secondWordDetail">Me Gusta</string>
    <string name="tituloImageDetail">\"Titulo Lorem\"</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sed tempus mi, tempus malesuada justo. Sed in ultrices urna, at ultrices nisi. Vestibulum eu justo non eros pretium aliquet condimentum eget odio. Phasellus scelerisque dui eu nulla ullamcorper, et accumsan nulla dignissim. Pellentesque posuere tortor vel lacus imperdiet, at pulvinar orci iaculis. Aliquam hendrerit viverra nibh vitae finibus. Fusce eu dolor ullamcorper, posuere justo sed, pretium nunc. Proin eleifend, dui in ultricies condimentum, justo tortor convallis elit, id rutrum augue enim non neque. Ut at turpis ac magna pharetra laoreet eget vel neque.</string>
    <string name="transitionNamePicture">transitionNamePicture</string>
    <string name="searchhinttext">Buscar</string>

</resources>
