<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pictureCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/altoCardview"
    cardview:cardCornerRadius="@dimen/esquinasRedondasCardView"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/fotoCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/altoCardview"
            android:background="@drawable/image"
            android:scaleType="centerCrop"
            android:transitionName="@string/transitionNamePicture"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:background="@color/backgroundTextCard">

                <TextView
                    android:id="@+id/userNameCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usuario"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sizeUserNameCard"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/firstWord"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="@string/firstWordCard"
                        android:textSize="@dimen/sizeFirstWordCard"/>

                    <TextView
                        android:id="@+id/timeCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="@string/timeCard"
                        android:textSize="@dimen/sizeFirstWordCard"
                        android:layout_marginLeft="@dimen/marginDerechoTimeCard"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15sp"
                    >

                    <CheckBox
                        android:id="@+id/likeCheckCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/checkbox_selector"/>

                    <TextView
                        android:id="@+id/numeroLikesCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="@string/numeroLikes"
                        android:textSize="@dimen/sizeFirstWordCard"
                        android:layout_marginLeft="@dimen/marginDerechoTimeCard"/>
                </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>