<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.code.ebarrios.cursoandroid.View.CreateAccountActivity">

    <include layout="@layout/actionbar_toolbar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <!-- correo -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/editTextMarginCreateAccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/correoRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintCorreoRegistro"
                    android:inputType="textEmailAddress"
                    />

            </android.support.design.widget.TextInputLayout>

            <!-- nombre -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/editTextMarginCreateAccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nombreRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintNombreRegistro"
                    />

            </android.support.design.widget.TextInputLayout>

            <!-- usuario -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/editTextMarginCreateAccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/usuarioRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintUsuarioRegistro"
                    />

            </android.support.design.widget.TextInputLayout>

            <!-- contraseña -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/editTextMarginCreateAccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintPasswordRegistro"
                    android:inputType="textPassword"
                    />

            </android.support.design.widget.TextInputLayout>

            <!-- raised button de Registro -->
            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnRegistrar"
                android:theme="@style/RaisedButtonDark"
                android:layout_marginTop="@dimen/margenArribaBotonCrearCuenta"/>
        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
